# sui

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  FUZZING.md  README.md  crate-hashes.json  flake.nix  forge-gen.toml
sui-build/: Cargo.toml
sui-build/src/: closure.rs  convergence_builder.rs  lib.rs  local_builder.rs  reference_scan.rs  sandbox.rs  traits.rs
sui-build/tests/: build_parity.rs  full_build.rs
sui-build/tests/common/: mod.rs
sui-bytecode/: Cargo.toml
sui-bytecode/benches/: real_eval.rs  vm_perf.rs
sui-bytecode/src/: bridge.rs  builtins.rs  chunk.rs  compiler.rs  error.rs  intern.rs  lib.rs  nanbox.rs  opcode.rs  value.rs  vm.rs
sui-bytecode/tests/: parity.rs
sui-cache/: Cargo.toml
sui-cache-eval/: Cargo.toml
sui-cache-eval/src/: lib.rs
sui-cache/src/: config.rs  gc.rs  lib.rs  push.rs  server.rs  signing.rs
sui-cache/src/storage/: index.rs  local.rs  mod.rs  s3.rs
sui-compat/: Cargo.toml
sui-compat/benches/: nar.rs  store_path.rs
sui-compat/src/: content_address.rs  derivation.rs  flake.rs  flake_ref.rs  hash.rs  lib.rs  nar.rs  narinfo.rs  signature.rs  source.rs  store_path.rs  versions.rs  wire.rs
sui-compat/tests/: flake_lock_parity.rs  fuzz_lite.rs  nar_parity.rs  store_path_parity.rs
sui-daemon/: Cargo.toml
sui-daemon-client/: Cargo.toml
sui-daemon-client/src/: client.rs  error.rs  lib.rs
sui-daemon-frame/: Cargo.toml
sui-daemon-frame/src/: codec.rs  error.rs  lib.rs
sui-daemon-graph/: Cargo.toml
sui-daemon-graph/src/: main.rs
sui-daemon/src/: config.rs  connection.rs  graph_handler.rs  graph_server.rs  hot_cache.rs  lib.rs  server.rs  trust.rs
sui-daemon/src/connection/: dispatch.rs  handshake.rs  mod.rs  wire.rs
sui-daemon/tests/: graph_protocol.rs  real_nix_client.rs
sui-eval/: Cargo.toml
sui-eval/benches/: eval.rs
sui-eval/src/: ast.rs  builtins.rs  convert.rs  delegate.rs  drv_cache.rs  eval.rs  eval_cache.rs  fetcher.rs  flake_lock.rs  git.rs  lazy.rs  lexer.rs  lib.rs  parser.rs  path.rs  perf.rs  trace.rs  value.rs
sui-eval/src/builtins/: activation_script_bridge.rs  arithmetic.rs  attrs.rs  bridge_helpers.rs  coerce.rs  context.rs  control.rs  convergence.rs  convert.rs  convert_helpers.rs  derivation.rs  fetchers.rs  flake.rs  flake_eval.rs  flake_parse.rs  flake_registry.rs  hash_bridge.rs  helpers.rs  import_cache.rs  lists.rs  lock_file_bridge.rs  misc.rs  mod.rs  module_system_bridge.rs  narinfo_bridge.rs  nav.rs  paths.rs  realisation_bridge.rs  registry_bridge.rs  strings.rs  sui_ext.rs  tests.rs  types.rs  versions.rs
sui-eval/tests/: bridge_properties.rs  construction_gates.rs  diff_eval_nixpkgs_lib.rs  diff_eval_primitives.rs  drv_path_parity.rs  flake_eval_categorized.rs  flake_eval_mass.rs  flake_eval_parity.rs  flake_lock_roundtrip.rs  fuzz_lite.rs  lang_corpus.rs  oracle.rs  oracle_sanity.rs  parser_corpus.rs  perf_experiments.rs  perf_profile.rs  perf_regression.rs  property_eval.rs  system_eval_parity.rs  vs_cppnix.rs
sui-eval/tests/common/: mod.rs
sui-eval/tests/oracle_corpus/: 01_primitives.lisp  02_collections.lisp  03_bindings.lisp  04_overlays.lisp  05_builtins.lisp  06_string_ops.lisp  07_real_world.lisp  08_flake_refs.lisp  10_errors.lisp  11_builtin_errors.lisp  12_nixpkgs_lib.lisp  99_executable_specs.lisp
sui-eval/tests/perf_corpus/: 01_attrs_scaling.lisp  02_function_costs.lisp  03_thunk_waste.lisp
sui-graph-store/: Cargo.toml
sui-graph-store/src/: content_address.rs  error.rs  layout.rs  lib.rs  store.rs
sui-graph-store/tests/: integration.rs
sui-intern/: Cargo.toml
sui-intern/src/: lib.rs
sui-nix-wrap/: Cargo.toml
sui-nix-wrap/src/: main.rs
sui-nix-wrap/tests/: lock_100_percent.rs
sui-orchestrate/: Cargo.toml
sui-orchestrate/src/: command.rs  fleet.rs  lib.rs  node.rs  system.rs
sui-orchestrate/tests/: e2e_profile.rs
sui-protocol/: Cargo.toml
sui-protocol/src/: lib.rs  local.rs  version.rs
sui-spec/: Cargo.toml
sui-spec/specs/: activation_script.lisp  ast_graph.lisp  builtin_smoke_probes.lisp  catalog.lisp  cli_coverage.lisp  derivation.lisp  eval_cache.lisp  fetchers.lisp  flake.lisp  gc.lisp  hash.lisp  lock_file.lisp  lockfile_graph.lisp  module_graph.lisp  module_system.lisp  nar.lisp  narinfo.lisp  nix_replacement_coverage.lisp  parity_probes.lisp  profile.lisp  realisation.lisp  rebuild_probes.lisp  registry.lisp  sandbox.lisp  store_inventory.lisp  store_layout.lisp  store_ops.lisp  store_queries.lisp  store_recipes.lisp  store_transforms.lisp  substituters.lisp  trust_model.lisp  worker_protocol.lisp
sui-spec/src/: activation_script.rs  ast_evaluator.rs  ast_graph.rs  catalog.rs  cli.rs  cli_coverage.rs  derivation.rs  error.rs  eval_cache.rs  exec.rs  fetcher.rs  flake.rs  gc.rs  hash.rs  lib.rs  loader.rs  lock_file.rs  lockfile_graph.rs  module_compiler.rs  module_graph.rs  module_solver.rs  module_system.rs  nar.rs  narinfo.rs  nix_replacement_coverage.rs  operator_view.rs  parity.rs  probe.rs  profile.rs  realisation.rs  rebuild.rs  registry.rs  sandbox.rs  spec_trait.rs  store_analyze.rs  store_diff.rs  store_inventory.rs  store_layout.rs  store_ops.rs  store_query.rs  (+7 more)
sui-spec/tests/: ast_graph_real_world.rs  cli_coverage_invariants.rs  coverage_at_100.rs  hash_conversion_matrix.proptest-regressions  hash_conversion_matrix.rs  http_transport_properties.proptest-regressions  http_transport_properties.rs  interpreter_properties.rs  lockfile_graph_real_world.rs  module_compiler_real_world.rs  module_solver_e2e.rs  nar_properties.rs  nar_round_trip_properties.rs  operator_view_contract.rs  operator_view_fuzz.rs  per_domain_invariants.rs  property_tests.rs  registry_roundtrip.proptest-regressions  registry_roundtrip.rs  store_query_analyze_properties.rs  store_transform_properties.rs  substrate_cross_domain.rs  substrate_invariants.rs  sui_vs_nix_parity.rs  sweep_e2e.rs  wide_tooling_verification.rs
sui-store/: Cargo.toml
sui-store/src/: binary_cache.rs  convergence.rs  http.rs  lib.rs  local.rs  nar.rs  profile.rs  substitute.rs  traits.rs
sui-store/src/entity/: derivation_output.rs  (+3 more)
(+68 files in other folders)
