[workspace]
members = [
    "sui-intern",
    "sui-bytecode",
    "sui-cache",
    "sui-compat",
    "sui-store",
    "sui-eval",
    "sui-build",
    "sui-daemon",
    "sui-orchestrate",
    "sui-cache-eval",
    # Declarative Lisp-authored specs (behavioral oracle for CppNix
    # parity). Every imperative Rust function whose body reads "this
    # is what CppNix does" is a spec that belongs here, not in the
    # engine. Rust provides typed borders; Lisp is the free-middle
    # surface; the pair generates each other.
    "sui-spec",
    # The migration-bridge wrapper.  Exposes a `nix` binary that
    # consults sui-spec's CLI coverage catalog at runtime and routes
    # Working/SuiNative commands to sui; everything else falls back
    # to real cppnix.  Operators install this at /run/current-system
    # /sw/bin/nix to immediately gain sui's typed surface while M2.6+
    # work brings the rest of the cppnix surface to byte-identity.
    "sui-nix-wrap",
]
resolver = "3"

[workspace.package]
version = "0.1.9"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
repository = "https://github.com/pleme-io/sui"

[workspace.dependencies]
# Internal crates
sui-intern = { path = "sui-intern", version = "0.1.9" }
sui-bytecode = { path = "sui-bytecode", version = "0.1.9" }
sui-cache = { path = "sui-cache", version = "0.1.9" }
sui-compat = { path = "sui-compat", version = "0.1.9" }
sui-store = { path = "sui-store", version = "0.1.9" }
sui-eval = { path = "sui-eval", version = "0.1.9" }
sui-build = { path = "sui-build", version = "0.1.9" }
sui-daemon = { path = "sui-daemon", version = "0.1.9" }
sui-orchestrate = { path = "sui-orchestrate", version = "0.1.9" }
sui-cache-eval = { path = "sui-cache-eval", version = "0.1.9" }
sui-spec = { path = "sui-spec", version = "0.1.9" }

# Lisp surface for declarative specs — pleme-io's homoiconic
# S-expression reader + derive macro, both published on crates.io.
# Version-pinned to keep the workspace reproducible; bump in lockstep
# when adding a new domain to sui-spec.
tatara-lisp = "0.2.1"
tatara-lisp-derive = "0.2.1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# API stack
axum = { version = "0.8", features = ["macros"] }
async-graphql = { version = "7.0", features = ["chrono"] }
async-graphql-axum = "7.0"
tonic = "0.12"
prost = "0.13"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sea-orm = { version = "1", features = ["runtime-tokio-rustls", "sqlx-sqlite", "macros"] }
sea-orm-migration = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"

# CLI
clap = { version = "4", features = ["derive"] }

# Crypto
ed25519-dalek = { version = "2", features = ["std", "rand_core"] }
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1"

# Directories
dirs-next = "2"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client (for binary cache, fetchers)
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"] }

# Git operations (pure Rust, no C dependencies) — published version
# on crates.io.  Upstream gix has caught up with the edition-2024
# fixes the pleme-io fork ported, so we no longer need the fork.
gix = { version = "0.83", default-features = false, features = [
    "sha1",
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
    "worktree-mutation",
    "revision",
    "tree-editor",
] }

# Synchronous HTTP client (no tokio runtime — safe for nested blocking calls)
ureq = "3"

# Archive extraction (for fetchTarball)
flate2 = "1"
tar = "0.4"

# NATS (build agent mode)
async-nats = "0.38"

# Streaming
tokio-stream = "0.1"
futures-core = "0.3"

# Nix parsing (battle-tested MIT libraries)
rnix = "0.14"
rowan = "0.16"
nix-nar = "0.3"

# Stack growth (prevents stack overflow on deep nixpkgs fixpoints)
stacker = "0.1"

# Persistent data structures
im-rc = "15"
smallvec = { version = "1", features = ["union"] }
smol_str = "0.3"

# Performance
rustc-hash = "2"
mimalloc = { version = "0.1", default-features = false }
aho-corasick = "1"
base64 = "0.22"
data-encoding = "2"
redb = "2"
regex = "1"
toml = "0.8"

# Testing
proptest = "1"
tempfile = "3"
pretty_assertions = "1"
test-case = "3"
assert_matches = "1"
assert_cmd = "2"
predicates = "3"
criterion = "0.5"

[package]
name = "sui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust-native Nix replacement (粋 sui) — drop-in nix CLI with lazy evaluator, bytecode VM, sandboxed builder, content-addressed eval cache, and NATS-federated build agent"
keywords = ["nix", "package-manager", "build-system", "evaluator"]
categories = ["command-line-utilities", "development-tools::build-utils"]
readme = "README.md"

[[bin]]
name = "sui"
path = "src/main.rs"

[dependencies]
sui-bytecode.workspace = true
sui-cache.workspace = true
sui-compat.workspace = true
sui-store.workspace = true
sui-eval.workspace = true
sui-build.workspace = true
sui-daemon.workspace = true
sui-intern.workspace = true
sui-orchestrate.workspace = true
sui-spec.workspace = true
tokio.workspace = true
axum.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
tonic.workspace = true
prost.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
async-nats.workspace = true
tokio-stream.workspace = true
futures-core.workspace = true
mimalloc.workspace = true
base64.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
rand = "0.8"
url = "2"
ureq = "3"
regex.workspace = true

[dev-dependencies]
async-trait.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
serde_json.workspace = true
http-body-util = "0.1"
tower.workspace = true
tokio = { workspace = true, features = ["test-util"] }
sui-eval.workspace = true
sui-build.workspace = true
sui-store.workspace = true
sui-compat.workspace = true

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[lints.clippy]
pedantic = "warn"
