[package]
name = "sui-build"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Nix builder with sandboxed execution"

[dependencies]
sui-compat.workspace = true
sui-store.workspace = true
aho-corasick.workspace = true
async-trait.workspace = true
sha2.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
