[package]
name = "sui-build"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Nix builder with sandboxed execution, closure topo-sort, and reference scanning for the sui Rust-native runtime"
keywords = ["nix", "builder", "sandbox", "derivation"]
categories = ["development-tools::build-utils"]

[dependencies]
sui-compat.workspace = true
sui-store.workspace = true
aho-corasick.workspace = true
async-trait.workspace = true
sha2.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
blake3.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
serde_json.workspace = true
sui-store.workspace = true
sui-compat.workspace = true
