[package]
name = "sui-bytecode"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Bytecode compiler and VM for the Nix evaluator"

[dependencies]
rnix.workspace = true
rowan.workspace = true
serde_json.workspace = true
sha2.workspace = true
sui-compat.workspace = true
sui-intern.workspace = true
thiserror.workspace = true

[dev-dependencies]
sui-eval = { path = "../sui-eval" }
pretty_assertions.workspace = true
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "vm_perf"
harness = false

[[bench]]
name = "real_eval"
harness = false

[lints.clippy]
pedantic = "warn"
