[package]
name = "sui-bytecode"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Bytecode compiler and VM for the sui Rust-native Nix evaluator"
keywords = ["nix", "bytecode", "vm", "compiler", "evaluator"]
categories = ["compilers"]

[dependencies]
rnix.workspace = true
rowan.workspace = true
serde_json.workspace = true
sha2.workspace = true
sui-compat.workspace = true
sui-intern.workspace = true
sui-spec.workspace = true
thiserror.workspace = true

[dev-dependencies]
sui-eval.workspace = true
pretty_assertions.workspace = true
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "vm_perf"
harness = false

[[bench]]
name = "real_eval"
harness = false

[lints.clippy]
pedantic = "warn"
