[package]
name = "sui-cache-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Content-addressed evaluation cache for sui — hash-keyed memoization of Nix expressions"
keywords = ["nix", "cache", "memoization", "blake3"]
categories = ["caching"]

[dependencies]
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dirs-next = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints.clippy]
pedantic = "warn"
