[package]
name = "sui-daemon-client"
description = "Typed multiplexed client for the sui graph-server protocol. Connects to a UDS, sends typed requests, dispatches typed responses by RequestId. Reusable by sui CLI, tend, future ops tools."
keywords = ["sui", "client", "ipc", "rkyv"]
categories = ["network-programming", "asynchronous"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
sui-protocol.workspace = true
sui-daemon-frame.workspace = true
sui-graph-store.workspace = true
tokio = { workspace = true, features = ["net", "sync", "io-util", "rt", "macros", "time"] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
pretty_assertions.workspace = true
tempfile.workspace = true

[lints.clippy]
pedantic = "warn"
