[package]
name = "sui-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Nix daemon replacement (worker protocol server) for the sui Rust-native Nix runtime"
keywords = ["nix", "daemon", "worker-protocol", "ipc"]
categories = ["os::unix-apis", "asynchronous"]

[dependencies]
sui-compat.workspace = true
sui-store.workspace = true
sui-build.workspace = true
sui-eval.workspace = true
tokio.workspace = true
serde.workspace = true
serde_yaml_ng.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
libc = "0.2"
tsunagu = "0.1"
shikumi = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util", "process"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
