[package]
name = "sui-eval"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Clean-room Nix language evaluator (bytecode VM)"

[dependencies]
sui-bytecode.workspace = true
sui-compat.workspace = true
sui-store.workspace = true
rnix.workspace = true
rowan.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sha3.workspace = true
blake3.workspace = true
serde_yaml_ng.workspace = true
regex.workspace = true
toml.workspace = true
base64.workspace = true
data-encoding.workspace = true
thiserror.workspace = true
tracing.workspace = true
ureq.workspace = true
gix.workspace = true
flate2.workspace = true
tar.workspace = true
stacker.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
test-case.workspace = true
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "eval"
harness = false
