[package]
name = "sui-eval"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Clean-room Nix language evaluator (bytecode VM)"

[dependencies]
sui-bytecode.workspace = true
sui-compat.workspace = true
sui-intern.workspace = true
sui-store.workspace = true
sui-spec.workspace = true
rnix.workspace = true
rowan.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
md-5 = "0.10"
sha1 = "0.10"
redb.workspace = true
sha3.workspace = true
blake3.workspace = true
serde_yaml_ng.workspace = true
regex.workspace = true
toml.workspace = true
base64.workspace = true
data-encoding.workspace = true
thiserror.workspace = true
tracing.workspace = true
ureq.workspace = true
gix.workspace = true
flate2.workspace = true
tar.workspace = true
stacker.workspace = true
im-rc.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
smol_str.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
test-case.workspace = true
proptest.workspace = true
criterion.workspace = true
# tatara-lisp for Lisp-authored Nix test corpus + oracle testing.
# Path dep — assumes the pleme-io sibling-directory layout
# (~/code/github/pleme-io/{sui,tatara}/). This is a dev-only
# dependency: consumers of sui-eval don't need tatara checked out.
tatara-lisp = { path = "../../tatara/tatara-lisp" }
tatara-lisp-derive = { path = "../../tatara/tatara-lisp-derive" }
rand = "0.8"
rand_chacha = "0.3"

[[bench]]
name = "eval"
harness = false

[[test]]
name = "oracle"
path = "tests/oracle.rs"
