[package]
name = "sui-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Clean-room Nix language evaluator — lazy tree-walker + bytecode VM with construction-guaranteed Lazy<T>"
keywords = ["nix", "evaluator", "lazy", "tree-walker", "vm"]
categories = ["compilers", "parser-implementations"]

[dependencies]
sui-bytecode.workspace = true
sui-compat.workspace = true
sui-intern.workspace = true
sui-store.workspace = true
sui-spec.workspace = true
rnix.workspace = true
rowan.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
md-5 = "0.10"
sha1 = "0.10"
redb.workspace = true
sha3.workspace = true
blake3.workspace = true
serde_yaml_ng.workspace = true
regex.workspace = true
toml.workspace = true
base64.workspace = true
data-encoding.workspace = true
thiserror.workspace = true
tracing.workspace = true
ureq.workspace = true
gix.workspace = true
flate2.workspace = true
tar.workspace = true
stacker.workspace = true
im-rc.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
smol_str.workspace = true

[dev-dependencies]
tempfile.workspace = true
pretty_assertions.workspace = true
test-case.workspace = true
proptest.workspace = true
criterion.workspace = true
# tatara-lisp for Lisp-authored Nix test corpus + oracle testing.
# Version dep against crates.io — keeps `cargo metadata` clean
# in environments (CI, fresh checkout) where pleme-io/tatara isn't
# laid out next to sui on disk.  Operators with the sibling repo
# get the same version pinned here.
tatara-lisp.workspace = true
tatara-lisp-derive.workspace = true
rand = "0.8"
rand_chacha = "0.3"

[[bench]]
name = "eval"
harness = false

[[test]]
name = "oracle"
path = "tests/oracle.rs"
