[package]
name = "sui-orchestrate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "System and fleet orchestration for Nix deployments — sui-native NixOS/Darwin/HM rebuild pipeline"
keywords = ["nix", "orchestration", "fleet", "rebuild"]
categories = ["development-tools::build-utils"]

[dependencies]
sui-compat.workspace = true
sui-eval.workspace = true
sui-store.workspace = true
sui-build.workspace = true
tokio = { workspace = true, features = ["process"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
